--- a/minilotto/bin/AndroidManifest.xml
+++ b/minilotto/bin/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.minilotto"
+    package="com.minilotto_version1"
     android:versionCode="1"
     android:versionName="1.0" >
 
