--- a/minilotto/AndroidManifest.xml
+++ b/minilotto/AndroidManifest.xml
@@ -1,17 +1,81 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.minilotto_version1"
     android:versionCode="1"
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="19"
-        android:targetSdkVersion="19" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="17" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.minilotto_version1.MainActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.SpielFernsterActivity"
+            android:label="@string/title_activity_spiel_fernster"
+            android:parentActivityName="com.minilotto_version1.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.minilotto_version1.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.RegisterFernsterActivity"
+            android:label="@string/title_activity_register_fernster"
+            android:parentActivityName="com.minilotto_version1.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.minilotto_version1.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.NewSpielFernsterActivity"
+            android:label="@string/title_activity_new_spiel_fernster" >
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.MitRegisterFernsterActivity"
+            android:label="@string/title_activity_mit_register_fernster" >
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.EinfachSpielActivity"
+            android:label="@string/title_activity_einfach_spiel" >
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.MittleSpielActivity"
+            android:label="@string/title_activity_mittle_spiel" >
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.SchwerSpielActivity"
+            android:label="@string/title_activity_schwer_spiel" >
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.MainActivity_test_test"
+            android:label="@string/title_activity_main_activity_test_test"
+            android:parentActivityName="com.minilotto_version1.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.minilotto_version1.MainActivity" />
+        </activity>
+        <activity
+            android:name="com.minilotto_version1.Wellcome_Activity"
+            android:label="@string/title_activity_wellcome_"
+            android:parentActivityName="com.minilotto_version1.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.minilotto_version1.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
