--- a/minilotto/.settings/org.eclipse.core.resources.prefs
+++ b/minilotto/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/minilotto_version1/MainActivity.java=UTF-8
 encoding//src/com/minilotto_version1/SpielLottoActivity.java=UTF-8
