--- a/MiniLottoV1/.project
+++ b/MiniLottoV1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>minilotto</name>
+	<name>MiniLottoV1</name>
 	<comment></comment>
 	<projects>
 	</projects>
